--- a/recipes_app/templates/accounts/details.html
+++ b/recipes_app/templates/accounts/details.html
@@ -11,11 +11,13 @@
                 <h4 class="card-title">{{profile.first_name}} {{profile.last_name}}</h4>
 
                 <p class="card-text"><b>About me:</b> {{profile.about_me}}</p>
+                    {% if self.request.user.id == profile.user_id %}
                     <div>
                    <a href="{% url 'edit profile' profile.user.pk%}" class="btn btn-outline-warning">Edit Profile</a>
                    <a href="{% url 'delete profile' profile.user.pk%}" class="btn btn-danger">Delete Profile</a>
                    <a href="{% url 'create recipe' %}" class="btn btn-warning">Create Recipe</a>
                     </div>
+                    {% endif %}
                 </div>
             </div>
         <br>
