--- a/recipes_app/templates/base/home.html
+++ b/recipes_app/templates/base/home.html
@@ -67,7 +67,7 @@
             </div>
           </div>
         </div>
-
+    {% include 'accounts/all_profiles.html' %}
     <div>
     {% include 'base/footer.html' %}
     </div>
