--- a/recipes_app/templates/accounts/details.html
+++ b/recipes_app/templates/accounts/details.html
@@ -11,6 +11,7 @@
                 <h4 class="card-title">{{profile.first_name}} {{profile.last_name}}</h4>
 
                 <p class="card-text"><b>About me:</b> {{profile.about_me}}</p>
+                <p class="card-text"><b>Email:</b> {{profile.user.email}}</p>
                     {% if self.request.user.id == profile.user_id %}
                     <div>
                    <a href="{% url 'edit profile' profile.user.pk%}" class="btn btn-outline-warning">Edit Profile</a>
