--- a/recipes_app/templates/accounts/details.html
+++ b/recipes_app/templates/accounts/details.html
@@ -6,17 +6,21 @@
       <div class="padding">
         <div class="wrapper">
             <div class="card mb-3" >
-                <img src="{{profile.picture}}" class="card-img-left" alt="..." width="150" height="180">
+                <img src="{{profile.picture}}" class="card-img-left" alt="..." width="180" height="180">
                 <div class="card-body">
                 <h4 class="card-title">{{profile.first_name}} {{profile.last_name}}</h4>
 
                 <p class="card-text"><b>About me:</b> {{profile.about_me}}</p>
                 <p class="card-text"><b>Email:</b> {{profile.user.email}}</p>
-                    {% if self.request.user.id == profile.user_id %}
+                    {% if request.user == profile.user %}
                     <div>
-                   <a href="{% url 'edit profile' profile.user.pk%}" class="btn btn-outline-warning">Edit Profile</a>
-                   <a href="{% url 'delete profile' profile.user.pk%}" class="btn btn-danger">Delete Profile</a>
-                   <a href="{% url 'create recipe' %}" class="btn btn-warning">Create Recipe</a>
+                       <a class="active" href="{% url 'edit profile' profile.user.pk%}">Edit Profile</a>
+                       <div>
+                       <a class="active" href="{% url 'delete profile' profile.user.pk%}">Delete Profile</a>
+                       </div>
+                       <div>
+                       <a class="active" href="{% url 'create recipe' %}">Create Recipe</a>
+                       </div>
                     </div>
                     {% endif %}
                 </div>
