--- a/recipes_app/templates/recipes/soups.html
+++ b/recipes_app/templates/recipes/soups.html
@@ -2,25 +2,25 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block page_content %}
-        <div class="bg">
-          <div class="padding">
-            <div class="wrapper">
-                <article class="col-3">
-                  {% for s in soups %}
-                      {% if s %}
-                        <h3>{{ s.recipe_name|title }}</h3>
-                          <img src="{{s.recipe_picture.url}}" alt="..." width="128" height="128">
-                        <p>{{ s.how_to_make }}</p>
-                        <div class="relative"> <a class="button-2" href="{% url 'recipe details' s.pk %}">Read More</a> </div>
-                      {% else %}
-                        <h1>Sorry, we have no recipes in this category</h1>
-                      {% endif %}
+        {% if soups %}
+            <div class="bg">
+              <div class="padding">
+                <div class="wrapper">
+                  {% for soup in soups %}
+                      <article class="col-3">
+                        <h3>{{ soup.recipe_name|title }}</h3>
+                          <img src="{{soup.recipe_picture.url}}" alt="..." width="128" height="128">
+                        <p>{{ soup.how_to_make }}</p>
+                      <div class="relative"> <a class="button-2" href="{% url 'recipe details' soup.pk %}">Read More</a> </div>
+                      </article>
                   {% endfor %}
-                </article>
+
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-    <div>
-{#    {% include 'base/footer.html' %}#}
-    </div>
+        {% else %}
+            <article>
+                <h3 class="title">Sorry, we have no recipes in this category</h3>
+            </article>
+        {% endif %}
 {% endblock %}
