--- a/recipes_app/templates/base/base.html
+++ b/recipes_app/templates/base/base.html
@@ -60,7 +60,7 @@
                  {% if not user.profile %}
               <li><a href="{% url 'create profile' %}">Create Profile</a></li>
                  {% else %}
-              <li><a href="{% url 'profile details' user.profile.pk %}">Profile Details</a></li>
+              <li><a href="{% url 'profile details' request.user.id %}">Profile Details</a></li>
                  {% endif %}
               <li style="float:right"><a href="{% url 'logout' %}">Logout</a></li>
                 {% else %}
