--- a/recipes_app/templates/base/footer.html
+++ b/recipes_app/templates/base/footer.html
@@ -3,14 +3,12 @@
    <div class="padding">
     <div class="main">
       <div class="wrapper">
-        <div class="fleft footer-text"> Copyright &copy; <a href="#">Domain Name</a> All Rights Reserved <strong> Design by <a target="_blank" href="http://www.templatemonster.com/">TemplateMonster.com</a></strong>
+          <div class="fleft footer-text"> Copyright &copy;  <a class="active" href="{% url 'home' %}">GoodFoodCook</a> All Rights Reserved <strong> Design by <a target="_blank" href="http://www.templatemonster.com/">TemplateMonster.com</a></strong>
 
         </div>
         <ul class="list-services">
           <li>Link to Us:</li>
-          <li><a class="tooltips" href="#"></a></li>
-          <li class="item-1"><a class="tooltips" href="#"></a></li>
-          <li class="item-2"><a class="tooltips" href="#"></a></li>
+          <li><a class="tooltips" href="https://www.facebook.com/"></a></li>
         </ul>
       </div>
     </div>
