--- a/recipes_app/templates/base/base.html
+++ b/recipes_app/templates/base/base.html
@@ -23,10 +23,10 @@
 <script src="{% static 'js/jquery.easing.1.3.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/tms-0.3.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/tms_presets.js' %}" type="text/javascript"></script>
-{#<!--[if lt IE 9]>#}
-{#<script type="text/javascript" src="js/html5.js"></script>#}
-{#<link rel="stylesheet" href="css/ie.css" type="text/css" media="screen">#}
-{#<![endif]-->#}
+<!--[if lt IE 9]>
+<script type="text/javascript" src="{% static 'js/html5.js' %}"></script>
+<link rel="stylesheet" href="{% static 'css/ie.css' %}" type="text/css" media="screen">
+<![endif]-->
 </head>
 <body id="page1">
 <div id="bgSlider"></div>
